Prepare for release set sidebar size on form builder page a bit differently to prevent it from being too small when the page includes a lot of admin notices update version numbers remove completed translations

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2197,7 +2197,7 @@ tr.frm_options_heading td{
 .frm_no_section_fields{
 	text-align:center;
 	position:absolute;
-	width:100%;
+	width:95%;
 	color: #808080;
 	font-size:16px;
 }
